[project]
name = "python-janitor"
version = "0.1.0"
description = "Python string clean-up tool"
readme = "README.md"
authors = [
    { name = "pymk", email = "pymk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.38.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
